[gd_scene load_steps=2 format=3 uid="uid://0737woac8q3q"]

[ext_resource type="Script" path="res://scenes/hand/hand.gd" id="1_5lhvt"]

[node name="hand" type="Node3D"]
script = ExtResource("1_5lhvt")

[node name="Tile1" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3)

[node name="Tile2" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, -3)

[node name="Tile3" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16, 0, -3)

[node name="Tile4" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 24, 0, -3)

[node name="Tile5" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 32, 0, -3)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.813314, 0.581825, 0, -0.581825, -0.813314, 0, 56.2712, 0)
